--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>38 - Importing and optimizing the scene</title>
+    <title>Stuart's Portfolio</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
+
+    <div class="point treasurePoint">
+        <div class="label">Plunder</div>
+        <div class="text">all about my skills blah blah blah</div>
+    </div>
 </body>
 </html>
