--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <canvas class="webgl"></canvas>
 
-    <div class="point treasurePoint">
+    <div class="point treasurePoint visible">
         <div class="label">Plunder</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
