All labels are in the main scene
All labels are in the main scene. Further styling definitely necessary

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,20 @@
         <div class="label">Plunder</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
+
+    <div class="point skullPoint visible">
+        <div class="label">Skulls</div>
+        <div class="text">all about my skills blah blah blah</div>
+    </div>
+
+    <div class="point wheelPoint visible">
+        <div class="label">Heading</div>
+        <div class="text">all about my skills blah blah blah</div>
+    </div>
+
+    <div class="point flagPoint visible">
+        <div class="label">Heading</div>
+        <div class="text">all about my skills blah blah blah</div>
+    </div>
 </body>
 </html>
