Added loading bar
Added a loading bar

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 <body>
     <canvas class="webgl"></canvas>
 
+    <div class="loading-bar"></div>
+
     <div class="appear" id="backButton">Back</div>
 
     <div class="point treasurePoint visible">
