HTML invisible before load
No content is visible before loading has finished

--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,22 @@
 
     <div class="appear" id="backButton">Back</div>
 
-    <div class="point treasurePoint visible">
+    <div class="point treasurePoint">
         <div class="label">Plunder</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
 
-    <div class="point skullPoint visible">
+    <div class="point skullPoint">
         <div class="label">Ahoy</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
 
-    <div class="point wheelPoint visible">
+    <div class="point wheelPoint">
         <div class="label">Heading</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
 
-    <div class="point flagPoint visible">
+    <div class="point flagPoint">
         <div class="label">Voyages</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
