Created the actual content
Filled the divs with content

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 <body>
     <canvas class="webgl"></canvas>
 
+    <h1 id="title">Stuart's Pirate Bay Portfolio</h1>
+
     <div class="loading-bar"></div>
 
     <div class="appear" id="backButton">Back</div>
