Fixed the white space bug
Fixed the white space bug that would happen on mobile where the camera would tweak out if you scrolled to far. Light editing also

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Stuart's Portfolio</title>
 </head>
 <body>
+    <div class="wrapper">
     <canvas class="webgl"></canvas>
 
     <h1 id="title">Stuart's Pirate Bay Portfolio</h1>
@@ -35,5 +36,6 @@
     </div>
     
     <div class="appear" id="content"></div>
+    </div>
 </body>
 </html>
