--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Stuart's Portfolio</title>
 </head>
 <body>
     <div class="wrapper">
     <canvas class="webgl"></canvas>
 
-    <h1 id="title">Stuart's Pirate Bay Portfolio</h1>
+    <h1 id="title">Stuart's Treasure Island Portfolio</h1>
 
     <div class="loading-bar"></div>
 
     <div class="appear" id="backButton">Back</div>
 
     <div class="point treasurePoint">
-        <div class="label">Plunder</div>
+        <div class="label">Treasure</div>
         <div class="text">all about my skills blah blah blah</div>
     </div>
 
